--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -64,6 +64,7 @@ $fuchsia-color: #F012BE;
 $purple-color: #B10DC9;
 $maroon-color: #85144B;
 $white-color: #FFFFFF;
+$light-gray-color: #EEE;
 $silver-color: #DDDDDD;
 $gray-color: #AAAAAA;
 $black-color: #111111;
