--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -685,13 +685,6 @@ footer .footter-mobile .a-first {
 }
 
 @media (max-width: 427px) {
-    ul.navbar-nav{
-        padding-top: 10px;
-    }
-    .navbar-nav li {
-        height: 50px;
-        line-height: 50px;
-    }
     .banner figure>img {
         width: 100%;
     }
